
Directory lib/libawb
 Makefile.in               Locally Modified            6 

Directory lib/libagt
 Makefile.in               Locally Modified            6 

Directory lib/libagt/include
 Makefile.in               Locally Modified            6 

Directory lib
 Makefile.in               Locally Modified            6 

Directory lib/libdral
 Makefile.in               Locally Modified            6 

Directory lib/libdral/include
 Makefile.in               Locally Modified            6 

Directory etc
 asimrc.template           Locally Modified            6 

Directory .
 aclocal.m4                Locally Modified            6 


Updated with changes in simcore up to revision number 2227

Joel

----------
jsemer      Date: Wed Nov  8 10:31:07 EST 2006  CSN: CSN-asimcore-8
                  Wed Nov  8 15:31:07 UTC 2006


Directory admin/packages
 asim                      Locally Removed             7 
 asimcore                  Locally Added               - 

Directory libperl/Asim/lib/Asim/Workspace
 Template.pm               Locally Modified            6 

Directory lib/libasim/src
 xmlout-nolib-gz.cpp       Locally Added               0 

Directory etc
 asim.pack                 Locally Modified            6 

Directory .
 configure                 Locally Modified            7 
 configure.in              Locally Modified            7 


Change name to asimcore.

Joel

----------
jsemer      Date: Wed Nov  8 11:03:34 EST 2006  CSN: CSN-asimcore-9
                  Wed Nov  8 16:03:34 UTC 2006


Directory etc
 asim.pack                 Locally Modified            8 


Changed asimcore repository location from .../svn/asim to .../asim/asimcore

Joel

----------
emer        Date: Wed Nov  8 17:15:19 EST 2006  CSN: CSN-asimcore-11
                  Wed Nov  8 22:15:19 UTC 2006


Directory libperl/Asim/lib/Asim/Workspace
 Template.pm               Locally Modified           10 

Fixed up template creation for new workspaces.

Joel