@@ -3,3 +3,4 @@ CSN-asim-7
 CSN-asimcore-8
 CSN-asimcore-9
 CSN-asimcore-11
+CSN-asimcore-12
